+ADD: Exception for invalid AuthorizationURI -FIX: MessageHeaderQueryServiceProtobufImpl did not actually send Protobuf +ADD: Exception in case of Encoder- and Sender MixUp of Protobuf and JSON